Re-enable svgTextTool as a modal window

It has to be this way to avoid being covered by tool windows, 
and before changing to nonModal as Tool window, a workaround
 for shortcuts must be made. 

As a Tool window the menu is not shown, making some edition
options unavailable.

BUG:407878
BACKPORT:krita/4.2
(cherry picked from commit cd4d6453dac73d9d0851e7b2f63589bf0824fc82)